--- a/ff_dotnet/FFSite/design/design.css
+++ b/ff_dotnet/FFSite/design/design.css
@@ -48,6 +48,20 @@ p, h1 {
 .display_nav_top_inline {
 	display: inline;
 }
+.display_nav_top_inline_left {
+    background-color: transparent;
+    position: absolute;
+    right: 5em;
+    width: 2em;
+}
+.display_nav_top_inline_right {
+    background-color: transparent;
+    position: absolute;
+    overflow: hidden;
+    height: 1.3em;
+    left: 3em;
+    width: 6em;
+}
 #inner_nav {
 	margin-left: 9em;
 	width: 10em;
@@ -91,7 +105,7 @@ div.indent p {
 .blank_line {
 	color: transparent;
 }
-@media screen and (min-width: 14em) and (max-width: 17.99em) {
+@media screen and (min-width: 14em) and (max-width: 15.99em) {
 	#text_frame, #status, .now_loading img {
 		width: 13em;
 		margin-top: 0.3em;
@@ -102,6 +116,13 @@ div.indent p {
 		margin-top: 0.2em;
 		margin-bottom: 0.2em;
 	}
+    .display_nav_top_inline_left {
+        right: 4em;
+    }
+    .display_nav_top_inline_right {
+        left: 2em;
+        width: 5em;
+    }
 }
 @media screen and (min-width: 16em) and (max-width: 17.99em) {
 	#text_frame, #status, .now_loading img {
@@ -114,6 +135,12 @@ div.indent p {
 		margin-top: 0.2em;
 		margin-bottom: 0.2em;
 	}
+    .display_nav_top_inline_left {
+        right: 4em;
+    }
+    .display_nav_top_inline_right {
+        left: 2em;
+    }
 }
 @media screen and (min-width: 18em) and (max-width: 19.99em) {
 	#text_frame, #status, .now_loading img {
